syntax = "proto3";

package waku.v2;

import "waku/v2/message.proto";

message PushRequest {
  string pub_sub_topic = 1;
  WakuMessage message = 2;
}

message PushResponse {
  bool is_success = 1;
  string info = 2;
}

message PushRPC {
  string request_id = 1;
  PushRequest request = 2;
  PushResponse response = 3;
}
